--- a/lankar/historia.html
+++ b/lankar/historia.html
@@ -173,7 +173,7 @@
         <h4>Början</h4>    
         <p>Eu grundades från början med syftet att förena de europeiska länderna somm under åratal hade varit splittrade på grund av krig. Efter andra världskriget under 1950-talet så började ett kollektiv av europeiska länder samarbeta både politiskt och ekonomiskt. Dessa länder var Belgien, Frankrike, Italien, Luxemburg, Nederländerna och Västtyskland. Under sv period så växer ekonomin i unionen extremt och det finns till och med överskott inom jordbruksdepartementet.</p>
         <h4>Utveckling</h4>
-        <p>Unionen växer med flera medlemmar kommande år under 1970-talet: Danmark, Irland och Storbrittanien ansluter. Under denna period börjar EU ha ett större inflytande över sina regioner och börjar bidra till fattiga områden inom dem. De tar även tag  </p>
+        <p>Unionen växer med flera medlemmar kommande år under 1970-talet: Danmark, Irland och Storbrittanien ansluter. Under denna period börjar EU ha ett större inflytande över sina regioner och börjar bidra till fattiga områden inom dem. De tar även tag i miljöfrågor såsom utsläpp och nedsmutsning vilekt under 70-talet inte var så vanligt. Fler länder ansluter en liten stund senare och den Europeeiska enhetsakten undertecknas år 1986 vilket främjar inre handel då det tidigare var frihandelsproblem i unionen. </p>
     </div>
     <footer>
         <ul class="footer">
